--- a/templates/time-entry.html
+++ b/templates/time-entry.html
@@ -1,25 +1,35 @@
-{% extends 'base.html' %}
+{% extends 'main.html' %}
 
 {% block title %}Time Entry{% endblock %}
 
 {% block content %}
     <form method="POST">
         {{ form.csrf_token }}
-        <div class="form-group">
-            {{ form.start_date.label }}
-            {{ form.start_date(class_="form-control") }}
-        </div>
-        <div class="form-group">
-            {{ form.start_time.label }}
-            {{ form.start_time(class_="form-control") }}
-        </div>
-        <div class="form-group">
-            {{ form.end_date.label }}
-            {{ form.end_date(class_="form-control") }}
-        </div>
-        <div class="form-group">
-            {{ form.end_time.label }}
-            {{ form.end_time(class_="form-control") }}
+        <div class="form-row">
+            <div class="col">
+                <div class="form-group">
+                    {{ form.start_date.label }}
+                    {{ form.start_date(class_="form-control") }}
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    {{ form.start_time.label }}
+                    {{ form.start_time(class_="form-control") }}
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    {{ form.end_date.label }}
+                    {{ form.end_date(class_="form-control") }}
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    {{ form.end_time.label }}
+                    {{ form.end_time(class_="form-control") }}
+                </div>
+            </div>
         </div>
         <div class="form-group">
             {{ form.description.label }}
