Progress on login and accounts

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,19 +3,23 @@
 {% block body %}
     <div class="container">
         <header>
-            <h1>
-                <a href="{{ url_for('index') }}">
-                    Time Machine
-                </a>
-            </h1>
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                 <a class="navbar-brand" href="{{ url_for('index') }}">Time Machine</a>
                 <ul class="nav">
+                    {% if current_user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('time_sheet') }}">Time Sheet</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('time_entry') }}">Time Entry</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Log In</a></li>
+                    {% endif %}
                 </ul>
             </nav>
         </header>
+
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-primary">{{ message }}</div>
+        {% endfor %}
 
         <div class="container">
             {% block content %}
