Add semester table
- Refactor related tables, views, templates
- Add DbConnectionManager class

--- a/templates/courses/_fields.html
+++ b/templates/courses/_fields.html
@@ -12,13 +12,7 @@
 </div>
 <div class="form-row">
     <div class="form-group col-4">
-        {{ form.semester.label }}
-        {{ form.semester(class_="form-control") }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-4">
-        {{ form.year.label }}
-        {{ form.year(class_="form-control") }}
+        {{ form.semester_id.label }}
+        {{ form.semester_id(class_="form-control") }}
     </div>
 </div>
