--- a/templates/courses/all.html
+++ b/templates/courses/all.html
@@ -5,7 +5,6 @@
 {% block content %}
     <h1>
         All Courses
-        <a class="btn btn-sm btn-primary" href="{{ url_for('create_course') }}">Create Course</a>
     </h1>
     <table class="table table-striped table-hover table-sm">
         <thead>
@@ -13,7 +12,7 @@
             <th>Designation</th>
             <th>Name</th>
             <th>Semester</th>
-            <th>Year</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -22,7 +21,10 @@
                 <td>{{ course.designation }}</td>
                 <td>{{ course.name }}</td>
                 <td>{{ course.semester }}</td>
-                <td>{{ course.year }}</td>
+                <td>
+                    <a class="btn btn-sm btn-outline-secondary" href="#">Edit</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="#">Deactivate</a>
+                </td>
             </tr>
         {% else %}
             <tr>
@@ -31,4 +33,6 @@
         {% endfor %}
         </tbody>
     </table>
+    <a class="btn btn-sm btn-primary" href="{{ url_for('create_course') }}">Create New Course</a>
+
 {% endblock %}
