--- a/templates/projects/all.html
+++ b/templates/projects/all.html
@@ -1,10 +1,10 @@
 {% extends 'main.html' %}
 
-{% block title %}All Courses{% endblock %}
+{% block title %}All Projects{% endblock %}
 
 {% block content %}
     <h1>
-        All Teams
+        All Projects
     </h1>
     <table class="table table-striped table-hover table-sm">
         <thead>
@@ -12,19 +12,19 @@
             <th>Name</th>
             <th>Course</th>
             <th>Semester</th>
-            <th>Project</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        {% for team in teams %}
+        {% for project in projects %}
             <tr>
-                <td>{{ team.team_name }}</td>
+                <td>{{ project.project_name }}</td>
                 <td>
-                    {{ team.course_designation }}&mdash;{{ team.course_name }}
+                    {{ project.course_designation }}&mdash;{{ project.course_name }}
                 </td>
-                <td>{{ team.semester }}</td>
-                <td>{{ team.project_name }}</td>
+                <td>
+                    {{ project.semester }}
+                </td>
                 <td>
                     <a class="btn btn-sm btn-outline-secondary" href="#">Edit</a>
                     <a class="btn btn-sm btn-outline-secondary" href="#">Deactivate</a>
@@ -32,10 +32,11 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">No teams</td>
+                <td colspan="4">No projects</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-    <a class="btn btn-sm btn-primary" href="{{ url_for('create_team') }}">Create New Team</a>
+    <a class="btn btn-sm btn-primary" href="{{ url_for('create_project') }}">Create New Project</a>
+
 {% endblock %}
