--- a/templates/main.html
+++ b/templates/main.html
@@ -11,11 +11,11 @@
                 </a>
                 <ul class="nav">
                     {% if current_user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('time_sheet') }}">Time Sheet</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('time_entry') }}">Time Entry</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('all_courses') }}">Courses</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('all_teams') }}">Teams</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('all_projects') }}">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('all_accounts') }}">Accounts</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#"
                                id="navbarDropdown" role="button" data-toggle="dropdown">
