Improve error reporting

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <h1>Log In to Time Machine</h1>
+    {% include "_form_errors.html" %}
     <form method="POST">
         {{ form.hidden_tag() }}
         <div class="form-row">
