--- a/templates/main.html
+++ b/templates/main.html
@@ -33,7 +33,12 @@
         </header>
 
         {% for message in get_flashed_messages() %}
-            <div class="alert alert-primary">{{ message }}</div>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
         {% endfor %}
 
         <div class="container">
