--- a/templates/time/entry.html
+++ b/templates/time/entry.html
@@ -6,6 +6,12 @@
     <form method="POST">
         {{ form.csrf_token }}
         <div class="form-row">
+            <div class="form-group col-4">
+                {{ form.project_id.label }}
+                {{ form.project_id(class_="form-control") }}
+            </div>
+        </div>
+        <div class="form-row">
             <div class="col">
                 <div class="form-group">
                     {{ form.start_date.label }}
