--- a/templates/accounts/all.html
+++ b/templates/accounts/all.html
@@ -9,9 +9,9 @@
     <table class="table table-striped table-hover table-sm">
         <thead>
         <tr>
+            <th>Email</th>
             <th>First Name</th>
             <th>Last Name</th>
-            <th>Email</th>
             <th>Superuser</th>
             <th>Team</th>
             <th>Role</th>
@@ -21,9 +21,13 @@
         <tbody>
         {% for account in accounts %}
             <tr>
+                <td>
+                    <a href="{{ url_for('account_details', account_id=account.account_id) }}">
+                        {{ account.email }}
+                    </a>
+                </td>
                 <td>{{ account.first_name }}</td>
                 <td>{{ account.last_name }}</td>
-                <td>{{ account.email }}</td>
                 <td>{{ account.superuser }}</td>
                 <td>{{ account.team_name }}</td>
                 <td>{{ account.role_name }}</td>
