--- a/templates/time/sheet.html
+++ b/templates/time/sheet.html
@@ -22,8 +22,8 @@
                 <td>{{ entry.start_date }}
                     {{ entry.start_time }}
                 </td>
-                <td>{{ entry.end_date }}
-                    {{ entry.end_time }}
+                <td>{{ entry.stop_date }}
+                    {{ entry.stop_time }}
                 </td>
                 <td>{{ 0 }}</td>
                 <td>{{ entry.description }}</td>
