--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
                 </a>
                 <ul class="nav">
                     {% if current_user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('time_entry') }}">Time Entry</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('enter_time') }}">Time Entry</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('all_courses') }}">Courses</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('all_teams') }}">Teams</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('all_projects') }}">Projects</a></li>
@@ -50,6 +50,7 @@
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col">
+                    <h4>About</h4>
                     &copy; Copyright 2018 by Tom Nurkkala
                 </div>
                 <div class="col">
