--- a/templates/time/sheet.html
+++ b/templates/time/sheet.html
@@ -3,43 +3,89 @@
 {% block title %}Time Sheet{% endblock %}
 
 {% block content %}
-    <h1>Time Sheet</h1>
-    <table class="table table-striped table-hover table-sm">
-        <thead>
-        <tr>
-            <th>Project</th>
-            <th>Start/Stop</th>
-            <th>Duration</th>
-            <th>Description</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for entry in entries %}
+    {% for project in entries|groupby('project_name') %}
+        <h1>{{ project.grouper }}</h1>
+        <table class="table table-striped table-hover table-sm">
+            <thead>
             <tr>
-                <td>{{ entry.project_name }}</td>
-                <td>{{ entry.start_stop_dt }}</td>
-                <td>{{ entry.duration }}</td>
-                <td>{{ entry.description }}</td>
-                <td>
-                    <button class="btn btn-outline-primary btn-sm">Edit</button>
-                    <button class="btn btn-outline-secondary btn-sm">Copy</button>
-                    <button class="btn btn-outline-danger btn-sm">Delete</button>
-                </td>
+                <th>Start</th>
+                <th>Stop</th>
+                <th>Duration</th>
+                <th>Description</th>
+                <th>Actions</th>
             </tr>
-        {% else %}
+            </thead>
+            <tbody>
+            {% for entry in project.list %}
+                <tr>
+                    <td class="text-nowrap">{{ entry.start_str }}</td>
+                    <td class="text-nowrap">{{ entry.stop_str }}</td>
+                    <td>{{ entry.duration }}</td>
+                    <td>{{ entry.description }}</td>
+                    <td>
+                        <button type="button" class="btn btn-outline-danger btn-sm"
+                                data-toggle="modal" data-target="#deleteModal"
+                                data-time-id="{{ entry.time_id }}"
+                                data-description="{{ entry.description }}"
+                                data-duration="{{ entry.duration }}">
+                            Delete
+                        </button>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="5">No entries</td>
+                </tr>
+            {% endfor %}
+            <tfoot>
             <tr>
-                <td colspan="5">No entries</td>
+                <th colspan="2">Total Duration</th>
+                <td class="text-nowrap">{{ total_duration }}</td>
+                <td colspan="2"></td>
             </tr>
-        {% endfor %}
-        <tfoot>
-        <tr>
-            <th>Total Duration</th>
-            <td></td>
-            <td>{{ total_duration }}</td>
-            <td colspan="2"></td>
-        </tr>
-        </tfoot>
-        </tbody>
-    </table>
+            </tfoot>
+            </tbody>
+        </table>
+    {% endfor %}
+    <a class="btn btn-sm btn-primary" href="{{ url_for('enter_time') }}">Create New Entry</a>
+
+
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Delete this time entry?</h5>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="confirmDelete" class="btn btn-danger">Yes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block local_javascript %}
+    <script>
+        var time_id_to_delete = null;
+
+        $('#deleteModal').on('show.bs.modal', function (event) {
+            var modal = $(this);
+            var button = $(event.relatedTarget);
+            modal.find('.modal-body').text(button.data('description') + " (" + button.data('duration') + ")");
+            time_id_to_delete = button.data('time-id');
+        });
+
+        $('#confirmDelete').click(function () {
+            $('#deleteModal').modal('hide');
+            $.post("{{ url_for('delete_time') }}", {time_id: time_id_to_delete});
+            window.location.href = "{{ url_for('time_sheet') }}";
+        });
+    </script>
 {% endblock %}
