--- a/templates/accounts/details.html
+++ b/templates/accounts/details.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <th>Superuser</th>
-            <td>{{ account.superuser }}</td>
+            <td>{{ account.is_superuser }}</td>
         </tr>
         </tbody>
     </table>
