--- a/templates/_form_errors.html
+++ b/templates/_form_errors.html
@@ -1,5 +1,6 @@
 {% if form.errors %}
     <h2>There were problems</h2>
+    {{ form.errors }}
     <ul>
         {% for field_name in form.errors %}
             {% for field_error in form.errors[field_name] %}
